--- a/style.css
+++ b/style.css
@@ -12,10 +12,45 @@ body{
 #sec1firstdiv{
     width: 582px;
     height: 270px;
+    margin: 188px 131px 170px 120px;
 }
 #sec1firstdiv h1{
+    width: 582px;
+    height: 133px;
     font-weight: 700;
     font-size: 52px;
+    color: #3A3A3A;
+}
+#sec1firstdiv p{
+    width: 505px;
+    height: 60px;
+    font-weight: 600;
+    color: #3A3A3A;
+}
+#sec1firstdiv a{
+    width: 196px;
+    height: 44px;
+    background-color: #E02C6D;
+    border-radius: 41px;
+    Padding: 10px 24px;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+#sec1 img{
+    width: 440px;
+    height: 414px;
+    margin: 181px 132px 0px 0px;
+}
+/* logo section styles */
+#logosec{
+    width: 1110px;
+    height: 110px;
+    margin: 30px 140px 70px 265px;
+}
+#logosec img{
+    margin: 40px 20px 42px 20px;
 }
 /* section2 styles */
 
@@ -28,9 +63,18 @@ body{
     justify-items: center;
     grid-gap: 30px 30px;
 }
+#sec2heading{
+    width: 262px;
+    height: 70px;
+    color:#3A3A3A;
+    margin: 76px auto 26px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 28px;
+}
 #sec2 div{
-    width: 329px;
-    height: 476px;
+    width: 300px;
+    height: 450px;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
 }
