--- a/style.css
+++ b/style.css
@@ -11,11 +11,18 @@ body{
 #sec1,#sec3{
     display:flex;
 }
+header h1{
+    font-weight: 700;
+    font-size: 30px;
+    color: #3A3A3A;
+    margin: 130px 0px 0px 100px;
+    margin-bottom: 0px;
+}
 /* section1 styles */
 #sec1firstdiv{
     width: 582px;
     height: 270px;
-    margin: 188px 131px 170px 120px;
+    margin: 188px 131px 190px 120px;
 }
 #sec1firstdiv h1{
     width: 582px;
@@ -125,7 +132,7 @@ body{
     font-weight: 700;
     font-size: 16px;
     margin: 0px 0px 70px 1164px;
-
+    text-decoration: none;
 }
 /* sec3 styles */
 #sec3{
@@ -187,4 +194,16 @@ footer p{
     font-size: 28px;
     color:honeydew;
     padding: 10px 10px;
+}
+@media (max-width: 700px){
+    #sec2{
+        margin: 0 auto;
+        width: 1047px;
+        height:1450px;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        justify-items: center;
+        grid-gap: 0px 30px;
+        margin-bottom: 50px;
+    }
 }
