--- a/style.css
+++ b/style.css
@@ -15,14 +15,17 @@ header h1{
     font-weight: 700;
     font-size: 30px;
     color: #3A3A3A;
-    margin: 130px 0px 0px 100px;
+    margin: 130px 0px 0px 190px;
     margin-bottom: 0px;
 }
 /* section1 styles */
+#sec1{
+    margin: 0px 0px 0px 75px;
+}
 #sec1firstdiv{
     width: 582px;
     height: 270px;
-    margin: 188px 131px 190px 120px;
+    margin: 170px 131px 190px 120px;
 }
 #sec1firstdiv h1{
     width: 582px;
@@ -50,7 +53,7 @@ header h1{
 }
 #sec1 img{
     width: 440px;
-    height: 414px;
+    height: 370px;
     margin: 181px 132px 0px 0px;
 }
 /* logo section styles */
@@ -92,6 +95,7 @@ header h1{
 #sec2 img{
     width: 300px;
     height: 256px;
+    border-radius: 15px;
 }
 #sec2 h1{
     color: #18191F;
@@ -131,12 +135,13 @@ header h1{
     color: #E02C6D;
     font-weight: 700;
     font-size: 16px;
-    margin: 0px 0px 70px 1164px;
+    margin: 0px 0px 0px 1212px;
     text-decoration: none;
 }
 /* sec3 styles */
 #sec3{
     margin-bottom: 115px;
+    margin-top: 115px;
 }
 #sec3 h1{
     width: 610px;
