--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
-#sec1,#sec3{
+#sec1{
     display:flex;
 }
 header h1{
@@ -140,20 +140,26 @@ header h1{
 }
 /* sec3 styles */
 #sec3{
+    display: grid;
+    grid-template-columns: repeat(1,fr);
     margin-bottom: 115px;
     margin-top: 115px;
+    height: 
 }
 #sec3 h1{
-    width: 610px;
-    height: 60px;
+    width: 404px;
+    height: 40px;
     font-weight: 700;
     font-size: 38px;
     color: #0A0826;
     margin-bottom: 0;
+    margin-left: 200px;
 }
 #sec3 p{
-    width: 501px;
-    height: 88px;
+    width: 404px;
+    height: 45px;
+    margin-left: 200px;
+    margin-top: 70px;
     font-weight: 700;
     font-size: 16px;
     color: #6C6C6C;
@@ -167,6 +173,8 @@ header h1{
     text-decoration: none;
     background-color: #E02C6D;
     color:#FFFFFF;
+    margin-left: 450px;
+    margin-top: 100px;
 }
 #sec3 img{
     width:404px;
