--- a/style.css
+++ b/style.css
@@ -18,6 +18,16 @@ header h1{
     margin: 130px 0px 0px 190px;
     margin-bottom: 0px;
 }
+.maina{
+    width: 155px;
+    Padding: 10px 2px 2px 2px;
+    font-weight: 700;
+    font-size: 100px;
+    text-decoration: none;
+    background-color: #E02C6D;
+    color:#FFFFFF;
+    margin-left: 670px;
+}
 /* section1 styles */
 #sec1{
     margin: 0px 0px 0px 75px;
@@ -129,7 +139,7 @@ header h1{
 .fa-arrow-right{
     color: honeydew;
 }
-#seemore,#special{
+#seemore{
     width: 150px;
     height: 24px;
     color: #E02C6D;
@@ -141,10 +151,13 @@ header h1{
 /* sec3 styles */
 #sec3{
     display: grid;
-    grid-template-columns: repeat(1,fr);
-    margin-bottom: 115px;
-    margin-top: 115px;
-    height: 
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    margin: 115px 0px 200px 44px;
+    width: 1400px;
+    height: 600px;
+    border-radius: 20px;
+    box-shadow: -15px -15px 10px rgb(170, 96, 96);
 }
 #sec3 h1{
     width: 404px;
@@ -181,9 +194,10 @@ header h1{
     height: 270px;
     margin-left: 200px;
     margin-right: 96px;
+    border-radius: 20px;
 }
-#sec3 .sec3secdiv{
-    width: 610px;
+.sec3secdiv{
+    width: 500px;
     height: 224px;
 }
 /*footer style*/
@@ -209,14 +223,122 @@ footer p{
     padding: 10px 10px;
 }
 @media (max-width: 700px){
+    body{
+        width: 329px;
+    }
+    header h1{
+        width: 162px;
+        height: 24px;
+        font-weight: 700;
+        font-size: 16px;
+        color: #3A3A3A;
+        text-align: center;
+        margin: 0px auto;
+    }
+    #sec1{
+        display:flex;
+        flex-direction: column-reverse;
+    }
+    #sec1firstdiv{
+        width: 404px;
+        height: 222px;
+    }
+    #sec1firstdiv h1{
+        width: 404px;
+        height: 78px;
+        font-weight: 700;
+        font-size: 28px;
+        color: #3A3A3A;
+    }
+    #sec1firstdiv p{
+        width: 321px;
+        height: 65px;
+        font-weight: 600;
+        font-size: 14px;
+        color: #3A3A3A;
+    }
+    #sec1 img{
+        width: 257px;
+        height: 257px;
+    }
+    #logosec{
+        width: 276px;
+        height: 62px;
+    }
+    #logosec img{
+        margin: 40px 20px 42px 20px;
+    }
+    #sec2heading{
+        width: 150px;
+        height: 24px;
+        color:#3A3A3A;
+        text-align: center;
+        font-weight: 600;
+        font-size: 16px;
+    }
     #sec2{
         margin: 0 auto;
-        width: 1047px;
-        height:1450px;
+        width: 329px;
+        height:4504px;
         display: grid;
         grid-template-columns: repeat(1,1fr);
         justify-items: center;
         grid-gap: 0px 30px;
         margin-bottom: 50px;
+    }
+    #seemore{
+        width: 150px;
+        height: 24px;
+        color: #E02C6D;
+        font-weight: 700;
+        font-size: 16px;
+        margin: 0px 0px 0px 23px;
+        text-decoration: none;
+    }
+    #sec3{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        align-items: center;
+        width: 329px;
+        height: 1200px;
+        border-radius: 20px;
+        box-shadow: -15px -15px 10px rgb(170, 96, 96);
+    }
+    #sec3 h1{
+        width: 311px;
+        height: 72px;
+        font-weight: 700;
+        font-size: 24px;
+        color: #0A0826;
+        margin-bottom: 0;
+        margin-left: 2px;
+    }
+    #sec3 p{
+        width: 329px;
+        height: 88px;
+        margin-left: 2px;
+        margin-top: 70px;
+        font-weight: 700;
+        font-size: 16px;
+        color: #6C6C6C;
+    }
+    #sec3 a{
+        width: 155px;
+        height: 44px;
+        Padding: 10px 24px;
+        font-weight: 700;
+        font-size: 16px;
+        text-decoration: none;
+        background-color: #E02C6D;
+        color:#FFFFFF;
+        margin-left: 2px;
+        margin-top: 1px;
+    }
+    #sec3 img{
+        width:404px;
+        height: 270px;
+        margin-left: 2px;
+        margin-right: 3px;
+        border-radius: 20px;
     }
 }
